--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "webgl_3js_exp",
+  "name": "webgl_threejs_exp",
   "version": "1.0.0",
-  "description": "An experiment in webgl 3d rendering with 3js",
+  "description": "An experiment in webgl 3d rendering with threejs",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codebysd/webgl_3js_exp.git"
+    "url": "git+https://github.com/codebysd/webgl_threejs_exp.git"
   },
   "keywords": [
     "3d",
-    "3js",
+    "threejs",
     "webgl"
   ],
   "author": "S.D.",
@@ -22,6 +22,13 @@
   },
   "homepage": "https://github.com/codebysd/webgl_d3_exp#readme",
   "dependencies": {
-    "browserify": "^11.2.0"
+    "three": "^0.72.0",
+    "three-orbit-controls": "^71.0.0"
+  },
+  "devDependencies": {
+    "browserify": "^11.2.0",
+    "exorcist": "^0.4.0",
+    "gulp": "^3.9.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
