--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An experiment in webgl 3d rendering with babylonjs",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "gulp"
   },
   "repository": {
     "type": "git",
