updated package json.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "webgl"
   ],
   "author": "S.D.",
-  "license": "MIT",
+  "license": "GPL",
   "bugs": {
     "url": "https://github.com/codebysd/webgl_3d_exp/issues"
   },
