--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   },
   "homepage": "https://github.com/codebysd/webgl_3d_exp#readme",
   "dependencies": {
-    "babylonjs": "^2.3.0",
+    "babylonjs": "^4.2.0",
+    "babylonjs-loaders": "^4.2.0",
     "handjs": "^1.3.11",
-    "lodash": "^3.10.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "browserify": "^11.2.0",
-    "exorcist": "^0.4.0",
-    "gulp": "^3.9.1",
-    "vinyl-source-stream": "^1.1.0"
+    "@types/babylonjs": "^2.4.1",
+    "browserify": "^17.0.0",
+    "exorcist": "^2.0.0",
+    "gulp": "^4.0.2",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
